--- a/myproject/authentication/templates/accounts/signup.html
+++ b/myproject/authentication/templates/accounts/signup.html
@@ -302,7 +302,7 @@
        
   
     <div class="social-btn">
-        <a href="" class="google-btn">
+        <a href="{% provider_login_url 'google' %}" class="google-btn">
             <img src="{% static 'images/google.webp' %}" alt="Google">
             <span>Sign in with Google</span>
         </a>
