--- a/myproject/authentication/templates/accounts/login.html
+++ b/myproject/authentication/templates/accounts/login.html
@@ -145,7 +145,7 @@
             </form>
 
             <div class="social-btn">
-                <a href="" class="google-btn">
+                <a href="{% provider_login_url 'google' %}" class="google-btn">
                     <img src="{% static 'images/google.webp' %}" alt="Google">
                     <span>Sign in with Google</span>
                 </a>
