--- a/myproject/order/templates/order/invoice.html
+++ b/myproject/order/templates/order/invoice.html
@@ -91,7 +91,7 @@
        
         <div class="totals">
             <p><strong>Discount Applied:</strong> {{ discount_amount }}</p>
-            <h3 class='total'>Total after Discount: {{ total_after_discount }}</h3>
+            {% comment %} <h3 class='total'>Total after Discount: {{ total_after_discount }}</h3> {% endcomment %}
         </div>  
     </div>
  </table>
