--- a/myproject/products/templates/products/product_detail.html
+++ b/myproject/products/templates/products/product_detail.html
@@ -373,18 +373,18 @@
 
 					<!-- Icon header -->
 					<div class="wrap-icon-header flex-w flex-r-m">
-						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-modal-search">
-							<i class="zmdi zmdi-search"></i>
-						</div>
-
-						<div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti js-show-cart" data-notify="{{ cart_items_count }}">
-							<i class="zmdi zmdi-shopping-cart"></i>
-						</div>
-
-						<a href="#" class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 icon-header-noti" data-notify="0">
-							<i class="zmdi zmdi-favorite-outline"></i>
-						</a>
-					</div>
+                        {% comment %} <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-modal-search">
+                            <i class="zmdi zmdi-search"></i>
+                        </div> {% endcomment %}
+                        <a href="{% url 'cart:cart_view'  %}">
+                        <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11   js-show-cart" >
+                            <i class="zmdi zmdi-shopping-cart"></i>
+                        </div>  
+                           </a>
+                        <a href="{% url 'products:wishlist' 'view' %}" class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11  " data-notify="0">
+                            <i class="zmdi zmdi-favorite-outline"></i>
+                        </a>
+                    </div>
 				</nav>
 			</div>	
 		</div>
@@ -398,16 +398,16 @@
     </div>
 
     <!-- Icon header -->
-    <div class="wrap-icon-header flex-w flex-r-m m-r-15">
-        <div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 js-show-modal-search">
+    <div class="wrap-icon-header flex-w flex-r-m">
+        {% comment %} <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11 js-show-modal-search">
             <i class="zmdi zmdi-search"></i>
-        </div>
-
-        <div class="icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti js-show-cart" data-notify="2">
+        </div> {% endcomment %}
+        <a href="{% url 'cart:cart_view'  %}">
+        <div class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11   js-show-cart" >
             <i class="zmdi zmdi-shopping-cart"></i>
-        </div>
-
-        <a href="#" class="dis-block icon-header-item cl2 hov-cl1 trans-04 p-r-11 p-l-10 icon-header-noti" data-notify="0">
+        </div>  
+           </a>
+        <a href="{% url 'products:wishlist' 'view' %}" class="icon-header-item cl2 hov-cl1 trans-04 p-l-22 p-r-11  " data-notify="0">
             <i class="zmdi zmdi-favorite-outline"></i>
         </a>
     </div>
@@ -463,7 +463,7 @@
             <a href="product.html">Shop</a>
         </li>
 
-        <li>
+        {% comment %} <li>
             <a href="shoping-cart.html" class="label1 rs1" data-label1="hot">Features</a>
         </li>
 
@@ -477,12 +477,12 @@
 
         <li>
             <a href="contact.html">Contact</a>
-        </li>
+        </li> {% endcomment %}
     </ul>
 </div>
 
 <!-- Modal Search -->
-<div class="modal-search-header flex-c-m trans-04 js-hide-modal-search">
+{% comment %} <div class="modal-search-header flex-c-m trans-04 js-hide-modal-search">
     <div class="container-search-header">
         <button class="flex-c-m btn-hide-modal-search trans-04 js-hide-modal-search">
             <img src="{% static 'images/icons/icon-close2.png' %}" alt="CLOSE">
@@ -495,7 +495,7 @@
             <input class="plh3" type="text" name="search" placeholder="Search...">
         </form>
     </div>
-</div>
+</div> {% endcomment %}
 </header>
 
 	<!-- Cart -->
@@ -594,13 +594,13 @@
                             
                         <!-- Add to Cart Section -->
                         <div class="p-t-33">
-                            {% if messages %}
+                            {% comment %} {% if messages %}
                                 <div class="alert alert-danger">
                                     {% for message in messages %}
                                         <p>{{ message }}</p>
                                     {% endfor %}
                                 </div>
-                            {% endif %}
+                            {% endif %} {% endcomment %}
                             <form method="POST" action="{% url 'cart:cart_view' 'add'  %}" id="add-to-cart-form">
                                 {% csrf_token %}
                                 <input type='hidden' name='product_id' value={{product.id}}
@@ -1425,7 +1425,7 @@
 
 <!-- Image with zoom functionality -->
 
-<<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+1<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 <!-- Include Zoom.js -->
 <script src="https://cdn.jsdelivr.net/npm/zoom.js"></script>
